examples/datalog/10_edge_cases/80_very_long_string.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_long_str
Knowledge graph 'test_long_str' created.
Switched to knowledge graph: test_long_str
> .kg use test_long_str
Switched to knowledge graph: test_long_str
> +data[(1, "this_is_a_very_long_string_that_goes_on_and_on_and_on_for_quite_some_time_to_test_handling_of_longer_values")].
Inserted 1 fact(s) into 'data'.
> len_check(Id, S, L) :- data(Id, S), L = LEN(S).
Script error: Parse error: Invalid term: 'LEN(S)'
